# as4

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/include/: beatLib.h  beatMaker.h  periodTimer.h  textDisplay.h  time_helpers.h  udp.h
app/src/: audioMixer.c  beatLib.c  beatMaker.c  main.c  textDisplay.c  time_helpers.c  udp.c
hal/: CMakeLists.txt
hal/include/hal/: accelerometer.h  display.h  joystick.h  pwm.h  sharedMem-Linux.h
hal/pru/: as4.c  twomake.sh
hal/src/: accelerometer.c  display.c  joystick.c  pwm.c  sharedMem-Linux.c
pru/: Makefile
pru-as4/: as4.c  sharedDataStruct.h
pru/linux/: Makefile  accelerometer.c  linux  sharedDataStruct.h  sharedMem-Linux.c
pru/pru/: as4.c
